--- a/template/series.html
+++ b/template/series.html
@@ -31,10 +31,16 @@
                     <nav>
                         <div class="nav-wrapper">
                             <a href="index.html" class="brand-logo center"><img src="res/logo.png" alt="Tatulum"></a>
+                            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                             <ul id="nav-mobile" class="left hide-on-med-and-down">
-                                <li><a href="series.html">Series</a></li>
-                                <li><a href="team.html">About Us</a></li>
-                                <li><a href="#">JavaScript</a></li>
+                                <li><a href="series.html"><i class="material-icons left">search</i>Find Series</a></li>
+                                <li><a href="watched.html"><i class="material-icons left">visibility</i>Watched Series</a></li>
+                                <li><a href="team.html"><i class="material-icons left">group</i>Team</a></li>
+                            </ul>
+                            <ul class="side-nav" id="mobile-demo">
+                                <li><a href="series.html">Find Series</a></li>
+                                <li><a href="watched.html">Watched Series</a></li>
+                                <li><a href="team.html">Team</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -61,8 +67,7 @@
                                    I am convenient because I require little markup to use effectively.</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">This is a link</a>
-                                <a href="#">This is a link</a>
+                                <a href="spec.html">Episode list</a>
                             </div>
                         </div>
                     </div>
