--- a/template/watched.html
+++ b/template/watched.html
@@ -13,7 +13,7 @@
     
     <meta charset="UTF-8">
     <link rel="icon" type="img/ico" href="res/fav.png">
-    <title>Team</title>
+    <title>Series</title>
 </head>
 
 <body>
@@ -46,68 +46,36 @@
                     </nav>
                 </div>
             </div>
-            <!-- Meet the team -->
-            <div id="team" class="section">
-                <div class="row">
-                  <h2 class="header">Meet Tatulum team</h2>
-                  <p class="caption">We are a team of students from Rotkreuz Informatik.</p>
-                  <div class="s12 center">
-                    <div class="image-container">
-                      <img src="images/team.jpg" style="width:100%;">
+            <div class="row tag-search">
+                <div class="col s12">
+                    <div class="card-panel beige">
+                        <div id="tag-search" class="chips chips-placeholder"></div>
                     </div>
-                  </div>
                 </div>
-                <br>
-
-                <div class="row">
-                <div class="col s12 m3 center-on-small-only">
-                <div class="image-container">
-                  <img src="images/alan.jpg" class="circle responsive-img">
+            </div>
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card hoverable horizontal blue-grey darken-1">
+                        <div class="card-image">
+                            <img src="res/one-piece.jpg">
+                            <span class="card-title">One Piece</span>
+                        </div>
+                        <div class="card-stacked">
+                            <div class="card-content white-text">
+                                <span class="card-title">One Piece</span>
+                                <p>I am a very simple card. I am good at containing small bits of information.
+                                   I am convenient because I require little markup to use effectively.</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#">This is a link</a>
+                                <a href="#">This is a link</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-                <div class="col s12 m9">
-                <h4>Alan Meile</h4>
-                <p>Alvin is an Information Systems and Human Computer Interaction Major. He worked as a Software Engineer at Fidelity Investments this past summer.</p>
-                </div>
-                </div>
-
-                <div class="row">
-                <div class="col s12 m3 center-on-small-only">
-                <div class="image-container">
-                  <img src="images/daniel.png" class="circle responsive-img">
-                  </div>
-                </div>
-                <div class="col s12 m9">
-                <h4>Daniel Rösch</h4>
-                <p>Daniel is an Information Systems major with a minor in computer science. He worked at as a Front End Developer at Shift Collaborative this past summer.</p>
-                </div>
-                </div>
-
-                <div class="row">
-                <div class="col s12 m3 center-on-small-only">
-                <div class="image-container">
-                <img src="images/cyrill.png" class="circle responsive-img">
-                  </div>
-                </div>
-                <div class="col s12 m9">
-                <h4>Cyrill Jauner</h4>
-                <p>Cyrill is an Information Systems major with a minor in Human Computer Interaction. He worked as a software developer for Intuit this past summer.</p>
-                </div>
-                </div>
-
-                <div class="row">
-                <div class="col s12 m3 center-on-small-only">
-                <div class="image-container">
-                <img src="images/marco.png" class="circle responsive-img">
-                  </div>
-                </div>
-                <div class="col s12 m9">
-                <h4>Marco Weber</h4>
-                <p>Marco is currently drinking whisky on a boat somewhere in Zurich.</p>
-                </div>
-                </div>
-          </div>
+            </div>
         </div>
+        
     </main>
     
     <div class="container">
