--- a/template/index.html
+++ b/template/index.html
@@ -20,27 +20,35 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
     
     <main>
-        <div class="container">
+        <div class="container start-bg">
 
             <div class="row">
+                <!-- Navigation -->
                 <div class="col s12">
                     <nav>
                         <div class="nav-wrapper">
                             <a href="index.html" class="brand-logo center"><img src="res/logo.png" alt="Tatulum"></a>
+                            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                             <ul id="nav-mobile" class="left hide-on-med-and-down">
-                                <li><a href="series.html">Series</a></li>
+                                <li><a href="series.html"><i class="material-icons left">search</i>Find Series</a></li>
+                                <li><a href="watched.html"><i class="material-icons left">visibility</i>Watched Series</a></li>
+                                <li><a href="team.html"><i class="material-icons left">group</i>Team</a></li>
+                            </ul>
+                            <ul class="side-nav" id="mobile-demo">
+                                <li><a href="series.html">Find Series</a></li>
+                                <li><a href="watched.html">Watched Series</a></li>
                                 <li><a href="team.html">Team</a></li>
-                                <li><a href="#">JavaScript</a></li>
                             </ul>
                         </div>
                     </nav>
                 </div>
             </div>
             <div class="row">
-                <div class="col s3"></div>
-                <div class="col s6 card-panel beige">
+                <div class="col s6"></div>
+                <div class="col s6 card-panel beige col-margin-fix">
                     <h2>Login</h2>
                     <form class="col s12">
                         <div class="row">
@@ -64,11 +72,10 @@
                         </div>
                     </form>
                 </div>
-                <div class="col s3"></div>
             </div>
             <div class="row">
-                <div class="col s3"></div>
-                <div class="col s6 card-panel beige">
+                <div class="col s6"></div>
+                <div class="col s6 card-panel beige col-margin-fix">
                     <h2>Register</h2>
                     <form class="col s12">
                         <div class="row">
@@ -97,7 +104,6 @@
                         </div>
                     </form>
                 </div>
-                <div class="col s3"></div>
             </div>
         </div>
     </main>
