--- a/template/watched.html
+++ b/template/watched.html
@@ -46,32 +46,11 @@
                     </nav>
                 </div>
             </div>
-            <div class="row tag-search">
-                <div class="col s12">
-                    <div class="card-panel beige">
-                        <div id="tag-search" class="chips chips-placeholder"></div>
-                    </div>
-                </div>
-            </div>
+            <!-- Under construction -->
             <div class="row">
-                <div class="col s12 m6">
-                    <div class="card hoverable horizontal blue-grey darken-1">
-                        <div class="card-image">
-                            <img src="res/one-piece.jpg">
-                            <span class="card-title">One Piece</span>
-                        </div>
-                        <div class="card-stacked">
-                            <div class="card-content white-text">
-                                <span class="card-title">One Piece</span>
-                                <p>I am a very simple card. I am good at containing small bits of information.
-                                   I am convenient because I require little markup to use effectively.</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="#">This is a link</a>
-                                <a href="#">This is a link</a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col s12 construction">
+                    <img src="images/gobbleotron.gif" class="right">
+                    <div class="center-align">under construction</div>
                 </div>
             </div>
         </div>
@@ -83,7 +62,7 @@
             <div class="footer-copyright">
                 <div class="container">
                     © 2016 Copyright Tatulum Hack Team
-                    <a class="grey-text text-lighten-4 right" href="https://localhackday.mlh.io/" target="_blank">MLH Local Hack Day</a>
+                    <a class="grey-text text-lighten-4 right" href="https://localhackday.mlh.io/" target="_blank"><img src="res/mlh-local-hack-day-white.svg" class="responsive-img" alt="MLH Local Hack Day"></a>
                 </div>
             </div>
         </footer>
