--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -7,6 +7,11 @@ body {
     background-color:   #fcfcfc;
 }
 
+a .fa {
+    color:              white;
+    font-size:          36px;
+}
+
 main {
     flex:               1 0 auto;
 }
@@ -85,4 +90,67 @@ nav img {
     font-size:          50px;
     margin-top:         20%;
     opacity:            0.5;
+}
+
+/**
+ ########################### Episode Settings ########################### */
+/* Rating in Stars */
+.rating {
+    unicode-bidi:       bidi-override;
+    direction:          rtl;
+}
+.rating > span {
+    display:            inline-block;
+    position:           relative;
+    width:              1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+       content:         "\2605";
+       position:        absolute;
+}
+/* Date as Calender icon */
+time.icon
+{
+      font-size:        1em; /* change icon size */
+      display:          block;
+      position:         relative;
+      width:            7em;
+      height:           7em;
+      background-color: #fff;
+      border-radius:    0.6em;
+      box-shadow:       0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff, 0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
+      overflow:         hidden;
+}
+time.icon strong
+{
+  position:             absolute;
+  top:                  0;
+  padding:              0.4em 0;
+  color:                #fff;
+  background-color:     #8e24aa;
+    border-bottom:      2px dashed #4a148c;
+    box-shadow:         0 2px 0 #8e24aa;
+    width:              100%;
+    text-align:         center;
+}
+time.icon em
+{
+  position:             absolute;
+  bottom:               0.3em;
+  color:                #fd9f1b;
+    padding-left:       20%;
+}
+time.icon span
+{
+  font-size:            2.8em;
+  letter-spacing:       -0.05em;
+  padding-top:          0.8em;
+  color:                #2f2f2f;
+}
+.the-date {
+    font-size:          42px;
+    color:              #4a148c;
+    padding-top:        25px;
+    text-align:         center;
 }
